# generic-array

./: CMakeLists.txt  README.md  generic.c
